--- a/noxss/css/noxss.css
+++ b/noxss/css/noxss.css
@@ -40,6 +40,7 @@
 @import url('components/loaders.css');
 @import url('components/alerts.css');
 @import url('components/math.css');
+@import url('components/utilities.css');
 /* @import url('components/forms.css');       */ /* Exemplo: descomente quando criar forms.css */
 /* @import url('components/cards.css');       */ /* Exemplo: descomente quando criar cards.css */
 /* @import url('components/tabs.css');        */ /* Exemplo: descomente quando criar tabs.css */
